--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+  transition: all 1s;
 }
 
 body {
@@ -10,7 +11,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+
+body {
   background: #edf1f4;
+  transition: all 1s;
 }
 
 .calculator {
@@ -93,10 +98,10 @@ body {
 
 .toggleBtn {
   position: fixed;
-  top: 20px;
-  right: 20px;
-  width: 20px;
-  height: 20px;
+  top: 30px;
+  right: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: #555;
   cursor: pointer;
@@ -105,6 +110,7 @@ body {
 }
 
 .dark {
+  transition: all 1s;
   background: #282c2f;
 }
 
